crates/compiler/src/tests/e2e/good/0034_method_on_generic_struct_field/main.gom
struct Wrapper[T] {
    value: T,
}

fn wrap[T](x: T) -> Wrapper[T] {
    Wrapper { value: x }
}

fn main() {
    let w = wrap(42);
    string_println(w.value.to_string());
}
