crates/compiler/src/tests/e2e/bad/0571_recursive_generic_self_specialization/main.gom
fn blow[T](x: T) -> unit {
    blow((x, x))
}

fn main() {
    blow(0i32)
}
